fix(sotrybook): Add better line height and gaps to the main navigation elements Card: https://app.clickup.com/t/863h38913

--- a/src/styles/globals/navigation/_main-nav-first-level.css
+++ b/src/styles/globals/navigation/_main-nav-first-level.css
@@ -30,6 +30,7 @@
     font-family: var(--main-nav-link-font-family);
     font-weight: var(--main-nav-link-font-weight);
     font-size: var(--main-nav-link-font-size);
+    line-height: var(--main-nav-link-line-height);
     color: var(--main-nav-link-color);
 }
 
