--- a/src/styles/globals/navigation/_main-nav.css
+++ b/src/styles/globals/navigation/_main-nav.css
@@ -26,12 +26,13 @@
     --main-nav-list-item-text-display: flex;
     --main-nav-list-item-text-align-items: center;
     --main-nav-list-item-text-justify-content: space-between;
-    --main-nav-list-item-text-gap: var(--spacing-normal);
+    --main-nav-list-item-text-gap: var(--spacing-xs);
 
     --main-nav-link-text-decoration: none;
     --main-nav-link-font-family: var(--font-family-text);
     --main-nav-link-font-weight: var(--font-weight-text-bold);
     --main-nav-link-font-size: var(--font-size-l);
+    --main-nav-link-line-height: var(--line-height-s);
     --main-nav-link-color: var(--color-bg);
 
     --main-nav-back-button-display: flex;
@@ -198,7 +199,7 @@
 
         --main-nav-list-item-height: 100%;
         --main-nav-list-item-position: relative;
-        --main-nav-list-item-text-gap: var(--spacing-s);
+        --main-nav-list-item-text-gap: var(--spacing-xs);
 
         --main-nav-link-font-size: var(--font-size-normal);
         --main-nav-link-font-weight: var(--font-weight-text-normal);
